yet another vertical alignment fix

--- a/src/components/name-text.css
+++ b/src/components/name-text.css
@@ -1,9 +1,7 @@
 .name-text {
   color: inherit;
   text-decoration: none;
-  display: inline-flex;
-  gap: 4px;
-  align-items: center;
+  display: inline;
 }
 .name-text.show-acct {
   display: inline-block;
@@ -20,4 +18,5 @@ a.name-text.short:is(:hover, :focus) i {
 
 .name-text .avatar {
   vertical-align: middle;
+  transform: translateY(-0.1em);
 }
